// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders LoginForm with error 1`] = `
<form
  className="ui form"
  onSubmit={[Function]}
>
  <div
    className="ui segment"
  >
    <div
      className="required field"
    >
      <label>
        Login
      </label>
      <div
        className="ui input"
      >
        <input
          aria-describedby={null}
          onChange={[Function]}
          placeholder="Login"
          required={true}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="required field"
    >
      <label>
        Password
      </label>
      <div
        className="ui input"
      >
        <input
          aria-describedby={null}
          onChange={[Function]}
          placeholder="Password"
          required={true}
          type="password"
          value=""
        />
      </div>
    </div>
    <div
      className="ui negative message"
    >
      <p>
        Invalid credentials
      </p>
    </div>
    <button
      className="ui fluid primary button"
      onClick={[Function]}
      type="submit"
    >
      Login
    </button>
  </div>
</form>
`;

exports[`renders LoginForm with loading 1`] = `
<form
  className="ui form"
  onSubmit={[Function]}
>
  <div
    className="ui segment"
  >
    <div
      className="required field"
    >
      <label>
        Login
      </label>
      <div
        className="ui input"
      >
        <input
          aria-describedby={null}
          onChange={[Function]}
          placeholder="Login"
          required={true}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="required field"
    >
      <label>
        Password
      </label>
      <div
        className="ui input"
      >
        <input
          aria-describedby={null}
          onChange={[Function]}
          placeholder="Password"
          required={true}
          type="password"
          value=""
        />
      </div>
    </div>
    <button
      className="ui fluid loading primary button"
      onClick={[Function]}
      type="submit"
    >
      Login
    </button>
  </div>
</form>
`;

exports[`renders LoginForm without crashing 1`] = `
<form
  className="ui form"
  onSubmit={[Function]}
>
  <div
    className="ui segment"
  >
    <div
      className="required field"
    >
      <label>
        Login
      </label>
      <div
        className="ui input"
      >
        <input
          aria-describedby={null}
          onChange={[Function]}
          placeholder="Login"
          required={true}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="required field"
    >
      <label>
        Password
      </label>
      <div
        className="ui input"
      >
        <input
          aria-describedby={null}
          onChange={[Function]}
          placeholder="Password"
          required={true}
          type="password"
          value=""
        />
      </div>
    </div>
    <button
      className="ui fluid primary button"
      onClick={[Function]}
      type="submit"
    >
      Login
    </button>
  </div>
</form>
`;
